fix: swagger 로드하는 위치 변경
