# routes/external.go
@@ -4,6 +4,7 @@ import (
 	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/fiber/v2/middleware/monitor"
 	"github.com/gofiber/swagger"
+	_ "github.com/miniyus/gofiber/api/gofiber"
 	"github.com/miniyus/gofiber/app"
 	"github.com/miniyus/gofiber/utils"
 )
